<?xml version="1.0"?>
<package format="2">
    <name>rm_localization</name>
    <version>0.0.0</version>
    <description>The rm_localization package</description>
    <maintainer email="luotinkai@todo.todo">luotinkai</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>rm_msgs</depend>
    <depend>std_msgs</depend>
    <depend>rm_common</depend>
    <depend>tf</depend>
    <depend>apriltag_ros</depend>
</package>
